Fixed spacing near breakpoints

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -53,7 +53,7 @@
 
       &-list {
         display: flex;
-        gap: var(--space-2xl);
+        gap: clamp(var(--space-m), 3vw, var(--space-2xl));
       }
 
       &-link {
